force-app/main/default/objects/Result__c/fields/ApexCallback__c.field-meta.xml
<CustomField>
    <fullName>ApexCallback__c</fullName>
    <description>Field automatically updated by Copado that is used to link some processes together.</description>
    <inlineHelpText>Field automatically updated by Copado that is used to link some processes together.</inlineHelpText>
    <label>Apex Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>