force-app/main/default/objects/Result__c/fields/CreditSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditSyncStatus__c</fullName>
    <description>An internal field to keep track of, if the function credit usage is synced</description>
    <label>Credit Sync Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>