force-app/main/default/objects/Result__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the deployment that triggered the result.</description>
    <inlineHelpText>Deployment Parent object that trigger the execution. (for legacy)</inlineHelpText>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>