force-app/main/default/objects/Result__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Total duration in seconds of the job execution. This value can be used to track job performance.</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(Start_Time__c)),
    NOT(ISBLANK(End_Time__c))
  ),
  (End_Time__c - Start_Time__c)*24*60*60,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total duration in seconds of the job execution. This value can be used to track job performance.</inlineHelpText>
    <label>Duration (in seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>