force-app/main/default/objects/Result__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Date and time when the job ended</description>
    <inlineHelpText>Date and time when the job ended</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>