force-app/main/default/objects/Result__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Code that helps you quickly identify the issue.</description>
    <inlineHelpText>Code that helps you quickly identify the issue.</inlineHelpText>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>