force-app/main/default/objects/Result__c/fields/Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Job_Execution__c</fullName>
    <description>Record link shortcutting to Job Step&apos;s Job Execution</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  JobStep__r.JobExecution__c ,  JobStep__r.JobExecution__r.Name , &quot;_blank&quot;)</formula>
    <inlineHelpText>Record link shortcutting to Job Step&apos;s Job Execution</inlineHelpText>
    <label>Job Execution</label>
    <type>Text</type>
</CustomField>