force-app/main/default/objects/Result__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>API name of the job that triggered the result. This information can be used for reporting purposes.</description>
    <inlineHelpText>API name of the job that triggered the result. This information can be used for reporting purposes.</inlineHelpText>
    <label>Job API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Logger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>