force-app/main/default/objects/Result__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Field used to link an external result to the Result record.</description>
    <inlineHelpText>Field used to link an external result to the Result record.</inlineHelpText>
    <label>External Result Link</label>
    <type>Url</type>
</CustomField>