force-app/main/default/objects/Result__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>IF( !ISBLANK(JobStep__c), JobStep__r.JobExecution__r.Context__c,
    HYPERLINK(&quot;/&quot;&amp; IF( !ISBLANK(Test__c), Test__r.Id,
       IF(!ISBLANK(User_Story__c), User_Story__r.Id,
            IF(!ISBLANK(Deployment__c), Deployment__r.Id,
                IF(!ISBLANK(Promotion__c), Promotion__r.Id,
                    IF(!ISBLANK( Function__c ), Function__r.Id,
                        IF(!ISBLANK( ParentId__c ), ParentId__c, &apos;&apos;)))))
  ) ,

    IF( !ISBLANK(Test__c), Test__r.Name,
        IF(!ISBLANK(User_Story__c), User_Story__r.Name,
            IF(!ISBLANK(Deployment__c), Deployment__r.Name,
                IF(!ISBLANK(Promotion__c), Promotion__r.Name,
                    IF(!ISBLANK( Function__c ), Function__r.Name ,
                        IF(!ISBLANK( ParentId__c ), &apos;Record : &apos; + ParentId__c,&apos;&apos;)))))
  )))</formula>
    <label>Parent</label>
    <type>Text</type>
</CustomField>