force-app/main/default/objects/Result__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description>15-digit Id of the record that triggered the process that generated the result.</description>
    <inlineHelpText>15-digit Id of the record that triggered the process that generated the result.</inlineHelpText>
    <label>Context ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>