force-app/main/default/objects/Result__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the promotion that triggered the result.</description>
    <inlineHelpText>Lookup field to the promotion that triggered the result.</inlineHelpText>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>