force-app/main/default/objects/Result__c/fields/Result_Data__c.field-meta.xml
<CustomField>
    <fullName>Result_Data__c</fullName>
    <description>Includes all the returned data by the process. This can be used by other processes.</description>
    <inlineHelpText>Includes all the returned data by the process. This can be used by other processes.</inlineHelpText>
    <label>Result Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>