force-app/main/default/objects/Result__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Date and time when the job started.</description>
    <inlineHelpText>Date and time when the job started.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>