force-app/main/default/objects/Result__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Test parent object which triggered the execution.</description>
    <inlineHelpText>The Test parent object which triggered the execution.</inlineHelpText>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>