force-app/main/default/objects/Result__c/listViews/LoggerView.listView-meta.xml
<ListView>
    <fullName>LoggerView</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>Function__c</columns>
    <columns>Job_Type__c</columns>
    <columns>JobStep__c</columns>
    <columns>Status__c</columns>
    <columns>Progress_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Type__c</field>
        <operation>equals</operation>
        <value>Logger</value>
    </filters>
    <label>LoggerView</label>
</ListView>